cros: Fix issue with window being black if minimized before tablet mode.

Issue was:
1) Open two windows in clamshell, minimize both.
2) Enter tablet.
3) Activate both windows, second window will be a black screen.

It seems minimizing in clamshell mode sets opacity to 0. So force opacity
to 1 before activate to ensure visiblity.

Test: manual
Bug: 920463
Change-Id: I3858ca4ac771d23879678f8705b73a281df0b8ac
Reviewed-on: https://chromium-review.googlesource.com/c/1406243
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622171}
Former-commit-id: 4aa1c73fef9de7113851349df372ad57fa21dd0a